Update the OTP verification email template to show images properly

--- a/server/common/templates/emails/email_otp_verification.html
+++ b/server/common/templates/emails/email_otp_verification.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
@@ -20,8 +19,10 @@
                 <td style="padding: 40px 0px 0px;">
                   <div style="text-align: center;">
                     <div style="padding-bottom: 20px;"><img
-                        src="https://res.cloudinary.com/dzx48hsih/image/upload/v1732352844/irgpnzkk3qyzoa9esasg.png" alt="Varta"
-                        style="width: 56px;"></div>
+                        width="56"
+                        height="56"
+                        title="Varta Logo"
+                        src="https://varta.aadvikpandey.com/splash/img/dark-2x.png" alt="Varta"></div>
                   </div>
                   <div style="padding: 20px; background-color: rgb(247, 247, 248);">
                     <div style="text-align: left; color: rgb(85, 99, 108);">
@@ -32,7 +33,7 @@
                       </center>
 
                       <p style="padding-bottom: 16px">If you didn’t request this, you can ignore this email.</p>
-                      <p style="padding-bottom: 16px">Thanks,<br>Aadvik Pandey</p>
+                      <p style="padding-bottom: 16px">Thank You,<br>Aadvik Pandey</p>
                     </div>
                   </div>
                   <div style="padding-top: 20px; text-align: center; color: rgb(85, 99, 108);">
